fix product height on small size

--- a/assets/css/product.scss
+++ b/assets/css/product.scss
@@ -295,14 +295,17 @@ body {
                         }
                     }
                     .art_desc_product_img {
-                        width: 0;
+                        width: 0 !important;
                         display: -webkit-box;
                         display: -ms-flexbox;
                         display: flex;
                         outline: none;
+                        &.slick-active {
+                            width: 100% !important;
+                        }
                         img {
                             max-width: 100%;
-                            max-height: 50%;
+                            // max-height: 50%;
                         }
                     }
                 }
